--- a/MORT/Properties/Resources.resx
+++ b/MORT/Properties/Resources.resx
@@ -214,4 +214,10 @@
   <data name="color_group_button" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\mort_resource\ocr_area\color_group_button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="snap_button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\mort_resource\sq_panel\snap_button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="snap_button_click" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\mort_resource\sq_panel\snap_button_click.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
