--- a/MORT/rtt.resx
+++ b/MORT/rtt.resx
@@ -118,6 +118,35 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAMoAAAFHCAYAAADgPNMaAAAABGdBTUEAALGPC/xhBQAABWFJREFUeF7t
+        2/9NFFsYgGGa8EfUf9WEBuzAEuyADizBDizBDuzAEuzAEuxgrx/XMXtxWd4NAife50ueCMswi8l5ObOT
+        5ezZs2e7p0+fAkecHXoQ+C+hQCAUCIQCwTKhfPr0aTfz8ePHy8+/f/9++fm7d+9+O/YUb9682X39+vXy
+        XDOfP38+eNwpPnz48PNs/86c//Xr1wePra7Ot2/fDh7Hw1gulFl0b9++vfx45rahfPny5ddCnvNOgLPQ
+        Dx1bzfdvC3lCnLm4uPjtuFPN/3Vmznno6zycpULZdpFZiH9qR5nZD2N2lIln/5hTXd1R5ny33VGGUNa1
+        VCiz4CaQMQt6ZtVQZkfZdr7tcvG2hLKu5ULZAtl+a982lDnnXV56bZeMf2JxC2Vdy4WyBbL9tj4Wyhx7
+        0+4wi+7UF/MzNz3v/muUiW9+/qvHbbYADn1tn1DWtUwosDKhQCAUCIQCgVAgWCaUQzN3geau1k13tm5r
+        zn/dHLv7dVtz5+zqvH///tfdr7t8bk6z5I6yv1DuK5Srz3Hfi3VuCc8IZU1C+UEo3MSl1w8rhbI/QlnH
+        UqEcemvJ3xrKoTBm7ChrEsoPc/7r5r4Wq0uvtS196bXNXYeyb+ZQsHdNKGtb8sX8vvvYUfbN3Gco2/PN
+        u5vnjZXzZlChrEcoV8w8RCj7j83uMtHMv/uP83D+96Fsf09ybO5ywc48xKUep1k+lFlEf/NCOjbH/saF
+        +7V8KLACoUAgFAiEAsHZo0ePdsD1Hj9+LBS4yZMnT3Znz58/3wHXe/Hixe7s5cuXO+B6r1692p2dn5/v
+        gOOEAoFQIBAKBEKBQCgQCAUCoUAgFAiEAoFQIBAKBEKBQCgQCAUCoUAgFAiEAoFQIBAKBEKBQCgQCAUC
+        oUAgFAiEAoFQIBAKBEKBQCgQCAUCoUAgFAiEAoFQIBAKBEKBQCgQCAUCoUAgFAiEAoFQIBAKBEKBQCgQ
+        CAUCoUAgFAiEAoFQIBAKBEKBQCgQCAUCoUAgFAiEAoFQIBAKBEKBQCgQCAUCoUAgFAiEAoFQIBAKBEKB
+        QCgQCAUCoUAgFAiEAoFQIBAKBEKBQCgQCAUCoUAgFAiEAoFQIBAKBEKBQCgQCAUCoUAgFAiEAoFQIBAK
+        BEKBQCgQCAUCoUAgFAiEAoFQIBAKBEKBQCgQCAUCoUAgFAiEAoFQIBAKBEKBQCgQCAUCoUAgFAiEAoFQ
+        IBAKBEKBQCgQCAUCoUAgFAiEAoFQIBAKBEKBQCgQCAUCoUAgFAiEAoFQIBAKBEKBQCgQCAUCoUAgFAiE
+        AoFQIBAKBEKBQCgQCAUCoUAgFAiEAoFQIBAKBEKBQCgQCAUCoUAgFAiEAoFQIBAKBEKBQCgQCAUCoUAg
+        FAiEAoFQIBAKBEKBQCgQCAUCoUAgFAiEAoFQIBAKBEKBQCgQCAUCoUAgFAiEAoFQIBAKBEKBQCgQCAUC
+        oUAgFAiEAoFQIBAKBEKBQCgQCAUCoUAgFAiEAoFQIBAKBEKBQCgQCAUCoUAgFAiEAoFQIBAKBEKBQCgQ
+        CAUCoUAgFAiEAoFQIBAKBEKBQCgQCAUCoUAgFAiEAoFQIBAKBEKBQCgQCAUCoUAgFAiEAoFQIBAKBEKB
+        QCgQCAUCoUAgFAiEAoFQIBAKBEKBQCgQCAUCoUAgFAiEAoFQIBAKBEKBQCgQCAUCoUAgFAiEAoFQIBAK
+        BEKBQCgQCAUCoUAgFAiEAoFQIBAKBEKBQCgQCAUCoUAgFAiEAoFQIBAKBEKBQCgQCAUCoUAgFAiEAoFQ
+        IBAKBEKBQCgQCAUCoUAgFAiEAoFQIBAKBEKBQCgQCAUCoUAgFAiEAoFQIBAK3Oh89w8eyI8JGFK7iwAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAkAICAQAAEABADoAgAAlgAAABAQEAABAAQAKAEAAH4DAAAwMAAAAQAIAKgOAACmBAAAICAAAAEA
