--- a/MORT/Properties/Resources.resx
+++ b/MORT/Properties/Resources.resx
@@ -184,4 +184,16 @@
   <data name="about" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\about.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Black_Font" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\mort_resource\Quick Setting\Black Font.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="OCR_Example" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\mort_resource\Quick Setting\OCR Example.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="RTT_Example" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\mort_resource\Quick Setting\RTT Example.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Font" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\mort_resource\Quick Setting\White Font.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
