--- a/MORT/Properties/Resources.resx
+++ b/MORT/Properties/Resources.resx
@@ -196,4 +196,10 @@
   <data name="White_Font" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\mort_resource\Quick Setting\White Font.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="payment_icon_yellow_large" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\payment_icon_yellow_large.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="qr_code" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\qr_code.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
