--- a/MORT/Properties/Resources.resx
+++ b/MORT/Properties/Resources.resx
@@ -205,4 +205,7 @@
   <data name="localize" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\localize.csv;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="donate_kofi" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\donate_kofi.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
